[package]
name = "mandel_method"
version = "0.4.0"
authors = ["Willi Kappler, grandor@gmx.de"]

[dependencies]
num = "0.1"
scoped_threadpool = "0.1"
#simple_parallel = "0.3"
rayon = "0.4"
crossbeam = "0.2"
scoped-pool = "1.0"
jobsteal = "0.5"
kirk = {git = "https://github.com/kinghajj/kirk.git"}
# clippy = "*"
mandel_util = {path = "../mandel_util"}

[profile.release]
lto = true
